--- a/Settings.json
+++ b/Settings.json
@@ -1,84 +1,86 @@
 {
   "extensions.autoCheckUpdates": true,
-  /*
-        WorkBench Settings =>
-    */
   "workbench.settings.editor": "json",
-  /*
-            UI Customisation =>
-        */
-  "workbench.colorTheme": "Night Owl",
   "workbench.iconTheme": "material-icon-theme",
   "workbench.startupEditor": "none",
+  "workbench.fontAliasing": "auto",
+  "workbench.tree.renderIndentGuides": "always",
   "search.useIgnoreFiles": true,
-  /*
-            Zen Mode =>
-        */
   "zenMode.hideLineNumbers": false,
   "zenMode.hideActivityBar": false,
-  /*
-        Editor Settings =>
-    */
   "files.autoSave": "afterDelay",
-  "files.autoSaveDelay": 500,
+  "files.autoSaveDelay": 1000,
   "files.simpleDialog.enable": true,
+  "editor.smoothScrolling": true,
   "editor.formatOnPaste": true,
   "editor.wordWrap": "on",
-  "editor.fontFamily": "Fira Code",
+  "editor.fontFamily": "Operator Mono Lig",
   "editor.fontSize": 13,
-  "editor.fontWeight": "normal",
+  "editor.fontWeight": "500",
   "editor.fontLigatures": true,
   "editor.suggestSelection": "first",
   "editor.cursorSmoothCaretAnimation": true,
   "editor.cursorBlinking": "solid",
   "editor.renderIndentGuides": true,
   "editor.renderWhitespace": "boundary",
-  "editor.minimap.enabled": false,
   "editor.copyWithSyntaxHighlighting": false,
   "editor.showFoldingControls": "mouseover",
-  "editor.snippetSuggestions": "top",
-  "editor.matchBrackets": false,
   "editor.tabSize": 2,
   "editor.rulers": [
-    80
+    80,
   ],
-  /*
-            Breadcrumbs =>
-        */
   "breadcrumbs.enabled": true,
-  /*
-        Termianl Settingss =>
-    */
   "terminal.integrated.showExitAlert": false,
-  "terminal.integrated.fontFamily": "Fira Code",
+  "terminal.integrated.fontFamily": "Operator Mono Lig",
   "terminal.integrated.fontSize": 13,
+  "terminal.integrated.fontWeight": "500",
+  "terminal.integrated.rendererType": "auto",
   "terminal.integrated.cursorBlinking": true,
   "terminal.integrated.cursorStyle": "line",
-  /*
-        Plugin Settings =>
-    */
-  /*
-            Emmet =>
-        */
   "emmet.includeLanguages": {
     "javascript": "javascriptreact"
   },
-  /*
-            Intellicode =>
-        */
-  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-  /*
-            NPM =>
-        */
+  "vsintellicode.modify.editor.suggestSelection": "enabled",
   "npm.enableScriptExplorer": true,
   "npm.autoDetect": "on",
   "explorer.confirmDelete": false,
-  "window.zoomLevel": 0,
   "editor.detectIndentation": false,
   "search.useGlobalIgnoreFiles": true,
   "[javascript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
   },
+  "eslint.autoFixOnSave": true,
+  "explorer.confirmDragAndDrop": false,
+  "editor.minimap.enabled": false,
+  // "workbench.colorTheme": "Palenight Operator",
+  "telemetry.enableTelemetry": false,
+  "telemetry.enableCrashReporter": false,
   "latex-workshop.view.pdf.viewer": "tab",
+  "workbench.colorTheme": "Night Owl",
   "python.jediEnabled": false,
+  // "editor.tokenColorCustomizations": {
+  //   "textMateRules": [
+  //     {
+  //       "scope": [
+  //         "comment",
+  //         "keyword",
+  //         "support.class.builtin.js",
+  //         "storage.modifier",
+  //         "storage.type.class.js",
+  //         "storage.type.function.js",
+  //         "storage.type.js",
+  //         "keyword.control.import.js",
+  //         "keyword.control.from.js",
+  //         "entity.name.type.js",
+  //         "keyword.control.flow.js",
+  //         "keyword.control.conditional.js",
+  //         "keyword.control.loop.js",
+  //         "keyword.operator.new.js",
+  //       ],
+  //       "settings": {
+  //         "fontStyle": "italic bold",
+  //       }
+  //     },
+  //   ],
+  // }
 }
